array.island.Island.scala.error
Erreur de compilation :
Island:2: error: value unary_! is not a member of Int
def island(num:Array[Int]): Int = {var b:Int = 0; var a:Int = num.size; a = a-1; for (i<- 1 to a) {if (!num(i)==0) {if (num(i+1)-num(i)>0) {b = b +1}}}; return b
                                                                                                       ^